# o1js-blobstream

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  aux_wtns.json  ci_free_disk_space.sh  f-vals.txt  mlo.json  package-lock.json
.github/workflows/: ci.yml
contracts/: .gitignore  README.md  package-lock.json  package.json
contracts/src/: array_list_hasher.ts  aux_witness.ts  build_vk_tree.ts  compile_recursion_vks.ts  consts.ts  dynamic_nonsense.ts  example.ts  fp.ts  fp12.ts  fp2.ts  fp6.ts  index.ts  line_parser.ts  miller.ts  node_resolver.ts  precomputed.ts  structs.ts  tree_of_vks.ts
contracts/src/blobstream/: batcher.ts  blobInclusionPlonkProof.json  blobInclusionSP1Proof.json  blobstreamPlonkProof.json  blobstreamSP1Proof.json  blobstream_contract.ts  prove_zkps.ts  rollup.ts  sp1_to_env.ts  verify_blob_inclusion.ts  verify_blobstream.ts
contracts/src/ec/: g1.ts  (+2 more)
pairing-utils/: Cargo.toml
pairing-utils/src/: constants.rs  eth_root.rs  kzg.rs  lib.rs  risc0_vk.rs  serialize.rs  tonelli_shanks.rs  utils.rs  write.rs
scripts/: .env  .env.example  .mlo_env  blobstream_verifier.sh  decider.sh  e2e_groth16.sh  e2e_plonk.sh  e2e_verify_plonk.sh  get_alphabeta_groth16.sh  get_aux_witness.sh  get_aux_witness_groth16.sh  groth16_tree.sh  plonk_tree.sh  prepare_vk.sh  verify_non_recursive.sh
scripts/blobstream_example/: blobInclusionSP1Proof.json  blobstreamSP1Proof.json  e2e_blobstream_inclusion.sh
scripts/groth_example/: e2e_risc_zero.sh  risc_zero_vk.json
scripts/risc_zero_example/: e2e_risc_zero.sh  risc_zero_proof.json  risc_zero_raw_vk.json
(+329 files in other folders)
